--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,6 @@ services:
       SOLAR_ENDPOINT: http://10.43.60.63/
       FETCH_INTERVAL: 600
       PYTHONUNBUFFERED: 1
-    depends_on:
-      - database
 
   webapp:
     image: docker.io/bitnami/laravel:9
@@ -26,14 +24,12 @@ services:
       - DB_DATABASE=rb_solar
     volumes:
       - './webapp:/app'
-    depends_on:
-      - database
 
   database:
     image: mariadb
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: rb_solar
+      MARIADB_ROOT_PASSWORD: password
+      MARIADB_DATABASE: rb_solar
     volumes:
       - './db_data:/var/lib/mysql'
       - './db_init.sql:/docker-entrypoint-initdb.d/db_init.sql'
@@ -45,5 +41,3 @@ services:
     environment:
       PMA_HOST: database
       PMA_ARBITRARY: 1
-    depends_on:
-      - database
